# mtga_meta

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  schema.sql
app/: config.py  database.py  main.py  schema.sql
app/routes/: decks.py  logs.py  pages.py
app/scripts/: scryfall_json.py
app/services/: cards.py  decks.py  logs.py  untapped.py
app/templates/: base.html  list_cards.html  untapped.html
app/utils/: cards.py
scripts/: 17lands_csv_to_sql.py  extract_from_scryfall_allcards_json.py  get_decks_from_untapped.py  scryfall_json.py
seventeenlands/: __init__.py  api_client.py  logging_utils.py  mtga_follower.py  retry_utils.py
src/python/seventeenlands/: mtga_follower.py
templates/: base.html  follow.html  index.html  list_cards.html  untapped.html
