[project]
name = "mtga-log-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.121.3",
    "jinja2>=3.1.6",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
