[project]
name = "mtga-meta"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.2",
    "fastapi[standard]>=0.121.3",
    "jinja2>=3.1.6",
    "jsonpickle>=4.1.1",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pprintpp>=0.4.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
    "sse-starlette>=3.0.3",
]

[tool.setuptools]
packages = ["app", "seventeenlands"]
